--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="Enjambre - Visita (Video Oficial HD).mp3" type="audio/mpeg">
-    Tu navegador no soporta el audio HTML5.
-  </audio>
+  <source src="enjambre_visita.mp3" type="audio/mpeg">
+</audio>
 
   <div class="corazon">❤️</div>
   <h1>Te Amo Muchísimo</h1>
@@ -74,7 +73,7 @@
   </p>
   <p>Gracias por existir. 💕</p>
 
-  <img src="Imagen de WhatsApp 2025-04-11 a las 17.54.46_1b78037e.jpg" alt="Nosotros" class="imagen-amor">
+  <img src="nosotros.jpg" alt="Nosotros" class="imagen-amor">
 
   <div class="firma">
     Con todo mi amor,<br>
